@@ -10,9 +10,9 @@ files[] = search_api_test.module
 
 hidden = TRUE
 
-; Information added by Drupal.org packaging script on 2016-03-14
-version = "7.x-1.17"
+; Information added by Drupal.org packaging script on 2016-04-20
+version = "7.x-1.18"
 core = "7.x"
 project = "search_api"
-datestamp = "1457970922"
+datestamp = "1461155351"
 
